# tf-cpp-lrmodel

./: Untitled Diagram.drawio
CLionProjects/makedate/: CMakeLists.txt  get1.cpp  main.cpp
CLionProjects/test/: CMakeLists.txt  LR_model.cpp  LR_model.h  cnn.cpp  data.txt  data0.txt  data1.txt  datav2.txt  main.cpp  tes.cpp  test.txt  w.txt  w2.txt
CLionProjects/test2/: CMakeLists.txt
